# bitstring

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  _cbitstring.pyx  _pybitstring.py  bitstore.py  bitstring.pages  bitstring.py  bitstring.wpr  bitstring_manual.pages  cythonize.py  examples.py  generate_luts.py  index.html  params.json  pyproject.toml  readme.txt  release_notes.md  release_notes.txt  requirements-dev.txt  setup.py  test.html  test_bitstring.py
.github/: dependabot.yml
.github/workflows/: ci.yml
bitstring/: __init__.py  __main__.py  array_.py  bitarray.py  bitarray.pyx  bitarray_.py  bits.py  bitstore.py  bitstore_bitarray.py  bitstore_bitarray_helpers.py  bitstore_bitformat.py  bitstore_bitformat_helpers.py  bitstore_common_helpers.py  bitstore_helpers.py  bitstore_tibs.py  bitstore_tibs_helpers.py  bitstream.py  bitstring.py  bitstring_array.py  bitstring_classes.py  bitstring_options.py  classes.py  colour.py  constbitarray.py  constbitstream.py  dtypes.py  errors.py  exceptions.py  fp8.py  helpers.py  luts.py  methods.py  mxfp.py  options.py  reader.py  scaled_array.py  scaled_dtypes.py  utils.py
branches/bitstring-1.0.0-update/: bitstring.py  release_notes.txt  setup.py  test_bitstring.py
branches/cython/: bitstring.py  cbits.pyx  cbitstore.pyx  cbitstring.pyx  setup.py
branches/python3/: bitstring.py  setup.py  test_bitstring.py
doc/: appendices.rst  array.rst  bitarray.rst  bits.rst  bitstream.rst  bitstring_classes.rst  conf.py  constbitarray.rst  constbitstream.rst  contents.rst  creation.rst  deprecated.rst  dtypes.rst  examples.rst  exotic_floats.rst  exp-golomb.rst  fp8.rst  functions.rst  index.rst  internals.rst  interpretation.rst  introduction.rst  main.rst  manual.rst  misc.rst  optimisation.rst  packing.rst  preamble.rst  quick_ref.rst  quick_reference.rst  reader.rst  reading.rst  reference.rst  release_notes.rst  requirements.txt  slicing.rst  upgrading_to_version_5.rst  walkthrough.ipynb  walkthrough.rst
doc/_static/: custom.css
doc/_templates/: sidebar-nav-bs-root.html
doc/html/: .buildinfo  appendices.html  bitstring_classes.html  contents.html  creation.html  deprecated.html  examples.html  exp-golomb.html  functions.html  genindex.html  index.html  internals.html  introduction.html  misc.html  objects.inv  optimisation.html  reading.html  (+5 more)
docs/: bitstring.pages
stylesheets/: stylesheet.css
test/: runtests.py  stress_test.py  test_bitarray.py  test_bits.py  test_bitstore.py  test_bitstream.py  test_bitstring.py  test_constbitarray.py  test_constbitstream.py
tests/: requirements.txt  stress_test.py  test_array.py  test_benchmarks.py  test_bitarray.py  test_bitarray_legacy.py  test_bits.py  test_bitstore.py  test_bitstream.py  test_bitstring.py  test_constbitstream.py  test_dtypes.py  test_fp8.py  test_generated.py  test_mxfp.py  test_reader.py  test_reader_legacy.py  test_scaled_dtypes.py
trunk/: MANIFEST  MANIFEST.in  README.txt  _cbitstring.pyx  _pybitstring.py  bitstore.py  bitstring.pages  bitstring.py  bitstring.pyx  bitstring_manual.pages  examples.py  readme.txt  release_notes.txt  runtests.py  setup.py  test_bitstring.py
wiki/: 0_3_Tutorial_DO_NOT_USE.wiki  ClassHelp.wiki  ClassReorganisation.wiki  CopyOfHomePage.wiki  CreatingBitStrings.wiki  DeconstructingBitStrings.wiki  Documentation.wiki  EncodeDecode.wiki  Examples.wiki  FrequentlyAskedQuestions.wiki  InterpretingBitStrings.wiki  IntroducingBitStrings.wiki  Manual.wiki  Miscellany.wiki  ModifyingBitStrings.wiki  Page01.wiki  Page02.wiki  Page03.wiki  Page04.wiki  Page05.wiki  Page06.wiki  Page07.wiki  Page08.wiki  Page09.wiki  Page10.wiki  Page11.wiki  Page12.wiki  Page13.wiki  Page14.wiki  Page15.wiki  Page16.wiki  Page17.wiki  Page18.wiki  Page19.wiki  Page20.wiki  Page21.wiki  Page22.wiki  Page23.wiki  Page24.wiki  Page25.wiki  (+22 more)
(+336 files in other folders)
