[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bitstring"
version = "5.0.0b1"
license = { text = "MIT" }
authors = [
  { name="Scott Griffiths", email="dr.scottgriffiths@gmail.com" },
]
description = "Simple construction, analysis and modification of binary data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["binary", "bitarray", "bitvector", "bitfield"]
dependencies = [
  "tibs >= 1.1.0, < 2.0",
]

[project.urls]
homepage = "https://github.com/scott-griffiths/bitstring"
documentation = "https://bitstring.readthedocs.io/"

# Keep in sync with tests/requirements.txt, which the CI uses.
[dependency-groups]
dev = [
  "pytest >= 7.4.2, < 8",
  "hypothesis >= 6.98.13, < 7",
  "gfloat >= 0.2.1, < 0.3",
  "pytest-benchmark >= 4.0.0, < 4.1",
]

[tool.setuptools]
packages = ["bitstring"]
